temp fix for tiles spacing

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -52,7 +52,7 @@ h1 {
   box-shadow: 1px 1px 4px 0 rgba(194, 209, 217, 0.4);
   border: solid 1px rgba(180, 191, 195, 0.24);
   margin-bottom: 25px;
-  margin-right: 10px;
+  margin-right: 9px;
 }
 
 
@@ -761,12 +761,14 @@ path {
   height: 128px;
 }
 
+/*
 .widget-add-btn {
   float: right;
   position: relative;
   left: 100px;
   bottom: 150px;
 }
+*/
 
 .table-units-active {
   display: block !important;
@@ -1469,4 +1471,16 @@ input[type="checkbox"].tinyswitch.ios-switch:checked + div > div {
   color: #6a7d88;
   cursor: pointer;
   margin-left: 20px;
+}
+
+.container{
+  width:1024px;
+}
+
+  .col-sm-3 {
+    width: 24% !important;
+}
+
+.col-sm-6 {
+  width: 49% !important;
 }
